added header nav

--- a/reservia.html
+++ b/reservia.html
@@ -8,16 +8,21 @@
     <title>Reservia</title>
 </head>
 <body>
+
+    <!--Header-->
+
     <header>
 
         <div id="logo_reservia"><img src="logo/Reservia@3x.png" alt="#"></div>
 
-        <li>
-            <ul>Hébergements</ul>
-            <ul>Activités</ul>
-            <ul>S'inscrire</ul>
-        </li>
-
+        <nav>
+            <li>
+                <ul><a href="#Hébergements">Hébergements</a></ul>
+                <ul><a href="#Activités">Activités</a></ul>
+                <ul><a href="#" id="inscription">S'inscrire</a></ul>
+            </li>
+        </nav>
+        
     </header>
     
 </body>
