--- a/reservia.html
+++ b/reservia.html
@@ -24,6 +24,14 @@
         </nav>
         
     </header>
-    
+
+    <div id="P1">
+        <p> Trouvez votre Hébergement pour des vacances de rêve</p>
+    </div>
+
+    <div id="P2">
+        <p>En plein centre ville ou en pleine nature</p>
+    </div>
+
 </body>
 </html>
