added location bar

--- a/reservia.html
+++ b/reservia.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reservia.css">
+    <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
 </head>
 <body>
@@ -25,12 +26,34 @@
         
     </header>
 
+    <!--paragraphes-->
+
     <div id="P1">
-        <p> Trouvez votre Hébergement pour des vacances de rêve</p>
+        <p> Trouvez votre hébergement pour des vacances de rêve</p>
     </div>
 
     <div id="P2">
         <p>En plein centre ville ou en pleine nature</p>
+    </div>
+
+    <!--recherche localisation-->
+
+    <div id="localisation">
+
+        <div id="logo_loc">
+            <i class="fas fa-map-marker-alt"></i>
+        </div>
+
+        <div id="nom_de_ville">
+                <p>
+                    <input type="text" />
+                </p>
+        </div>
+
+        <div id="bouton_rechercher">
+            <button id="button" name="button">Rechercher</button>
+        </div>
+
     </div>
 
 </body>
