--- a/reservia.html
+++ b/reservia.html
@@ -59,6 +59,40 @@
 
     </div>
 
+<!--filtres-->
+
+<div id="filtres">
+
+        <p>Filtres</p>
+
+    <div id="economique">
+        <div id="logo_billet">
+            <i class="fas fa-money-bill-wave"></i>
+        </div>
+        <p>Économique</p>
+    </div>
+
+    <div id="familial">
+        <div id="logo_child">
+            <i class="fas fa-child"></i>
+        </div>
+        <p>familial</p>
+    </div>
+
+    <div id="romantique">
+        <div id="logo_coeur">
+            <i class="fas fa-heart"></i>
+        </div>
+        <p>Romantique</p>
+    </div>
+
+    <div id="animaux_autorisé">
+        <div id="logo_chien">
+            <i class="fas fa-dog"></i>
+        </div>
+        <p>Animaux autorisés</p>
+    </div>
+</div>
 
 </body>
 </html>
