redesign of filters html and css

--- a/reservia.html
+++ b/reservia.html
@@ -69,29 +69,29 @@
         <div id="logo_billet">
             <i class="fas fa-money-bill-wave"></i>
         </div>
-        <p>Économique</p>
+        <button class="btn economique">Économique</button>
     </div>
 
     <div id="familial">
         <div id="logo_child">
             <i class="fas fa-child"></i>
         </div>
-        <p>familial</p>
+        <button class="btn familial">familial</button>
     </div>
 
     <div id="romantique">
         <div id="logo_coeur">
             <i class="fas fa-heart"></i>
         </div>
-        <p>Romantique</p>
+        <button class="btn romantique">romantique</button>
     </div>
 
     <div id="animaux_autorisé">
         <div id="logo_chien">
             <i class="fas fa-dog"></i>
         </div>
-        <p>Animaux autorisés</p>
-    </div>
+        <button class="btn animaux_autorisé">animaux autorisé</button>
+        </div>
 </div>
 
 </body>
