added informations html and css

--- a/reservia.html
+++ b/reservia.html
@@ -76,22 +76,31 @@
         <div id="logo_child">
             <i class="fas fa-child"></i>
         </div>
-        <button class="btn familial">familial</button>
+        <button class="btn familial">Familial</button>
     </div>
 
     <div id="romantique">
         <div id="logo_coeur">
             <i class="fas fa-heart"></i>
         </div>
-        <button class="btn romantique">romantique</button>
+        <button class="btn romantique">Romantique</button>
     </div>
 
     <div id="animaux_autorisé">
         <div id="logo_chien">
             <i class="fas fa-dog"></i>
         </div>
-        <button class="btn animaux_autorisé">animaux autorisé</button>
+        <button class="btn animaux_autorisé">Animaux autorisés</button>
         </div>
+</div>
+
+<!--informations-->
+
+<div id="informations">
+    <div id="logo_informations">
+        <i class="fas fa-info"></i>
+    </div>
+    <p>Plus de 500 logements sont disponibles dans cette ville</p>
 </div>
 
 </body>
