--- a/reservia.html
+++ b/reservia.html
@@ -48,6 +48,7 @@
 
             <div class="input">
                     <p>
+                        <label for="city">Marseille, France</label>
                         <input type="text" />
                     </p>
             </div>
