--- a/reservia.html
+++ b/reservia.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reservia.css">
-    <link rel="stylesheet" media="screen and (max-width: 980px)" href="resolution-iphone8.css">
+    <link rel="stylesheet" media="screen and (max-width: 375px)" href="resolution-iphone8.css">
     <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
 </head>
@@ -58,9 +58,13 @@
                 <button class="button" name="button">Rechercher</button>
             </div>
 
+            <div class="logo_search">
+                <i class="fas fa-search"></i>
+            </div>
+
         </div>
 
-    <!--filtres-->
+    <!--filters-->
 
         <div id="filters">
 
@@ -103,6 +107,10 @@
             </div>
             <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
+    </section>
+
+    <section>
+        <h1>Hébergements à Marseille</h1>
     </section>
 </body>
 </html>
