added hosting html and css

--- a/reservia.html
+++ b/reservia.html
@@ -109,8 +109,128 @@
         </div>
     </section>
 
+    <!--hosting and most popular-->
+
     <section>
-        <h1>Hébergements à Marseille</h1>
+        <div class="section">
+            <div class="hosting">
+                <h1>Hébergements à Marseille</h1>
+
+                <div id="pics_hosting">
+                    <div class="pics_hosting">
+                        <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="pics">
+                            <div class="description_pics_top">
+                                <h2>Auberge la Cannebièrre</h2>
+                                <span>Nuit à partir de <strong>25€</strong></span>
+                                <div class="stars">
+                                    <div class="stars_blue">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="stars_grey">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="pics_hosting">
+                        <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="pics">
+                            <div class="description_pics_top"> 
+                                <h2>Hôtel du port</h2>
+                                <span>Nuit à partir de <strong>52€</strong></span>
+                                <div class="stars">
+                                    <div class="stars_blue">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>    
+                    </div>
+                    <div class="pics_hosting">
+                        <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="pics">
+                            <div class="description_pics_top">   
+                                <h2>Hôtel Les mouettes</h2>
+                                <span>Nuit à partir de <strong>76€</strong></span>
+                                <div class="stars">
+                                    <div class="stars_blue">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="stars_grey">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="pics_hosting">
+                        <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="pics">
+                            <div class="description_pics_bottom">
+                                <h2>Hôtel de la mer</h2>
+                                <span>Nuit à partir de <strong>46€</strong></span>
+                                <div class="stars">
+                                    <div class="stars_blue">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="stars_grey">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="pics_hosting">
+                        <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="pics">
+                            <div class="description_pics_bottom">
+                                <h2>Auberge Le Panier</h2>
+                                <span>Nuit à partir de <strong>23€</strong></span>
+                                <div class="stars">
+                                    <div class="stars_blue">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="stars_grey">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="pics_hosting">
+                        <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="pics">
+                            <div class="description_pics_bottom">
+                                <h2>Hôtel chez Amina</h2>
+                                <span>Nuit à partir de <strong>96€</strong></span>
+                                <div class="stars">
+                                    <div class="stars_blue">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+
+                    <span class="">Afficher plus</span>
+
+            </div>
+
+            <div class="most_popular">
+                <h1>Les plus populaires</h1>
+            </div>
+        </div>
     </section>
 </body>
 </html>
