added most-popular html css

--- a/reservia.html
+++ b/reservia.html
@@ -228,7 +228,66 @@
             </div>
 
             <div class="most_popular">
-                <h1>Les plus populaires</h1>
+                <div class="header">
+                    <h1>Les plus populaires</h1>
+                    <div id="logo_header">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                </div>
+                <div id="pics_most_popular">
+                    <div class="pics_most_popular">
+                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="pics">
+                        <div class="description_pics_most_popular1">
+                            <h2>Hôtel Le soleil du </br> matin</h2>
+                            <span>Nuit à partir de <strong>128€</strong></span>
+                            <div class="stars_most_popular">
+                                <div class="stars_blue">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pics_most_popular">
+                        <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="pics">
+                        <div class="description_pics_most_popular2">
+                            <h2>Au coeur de l'eau </br> chambre d'hôtes</h2>
+                            <span>Nuit à partir de <strong>71€</strong></span>
+                            <div class="stars_most_popular">
+                                <div class="stars_blue">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="stars_grey">
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pics_most_popular">
+                        <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="pics">
+                        <div class="description_pics_most_popular3">
+                            <h2>Hôtel tout bleu et </br> blanc</h2>
+                            <span>Nuit à partir de <strong>68€</strong></span>
+                            <div class="stars_most_popular">
+                                <div class="stars_blue">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="stars_grey">
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
