added sections activity

--- a/reservia.html
+++ b/reservia.html
@@ -18,8 +18,8 @@
         <div id="logo_reservia"><img src="logo/Reservia@3x.png" alt="#"></div>
 
         <nav>
-                <a href="#Hébergements">Hébergements</a>
-                <a href="#Activités">Activités</a>
+                <a href="#hosting">Hébergements</a>
+                <a href="#activity">Activités</a>
                 <a href="#" id="inscription">S'inscrire</a>
         </nav>
         
@@ -114,11 +114,11 @@
     <section>
         <div class="section">
             <div class="hosting">
-                <h1>Hébergements à Marseille</h1>
+                <h1 id="hosting">Hébergements à Marseille</h1>
 
                 <div id="pics_hosting">
                     <div class="pics_hosting">
-                        <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="pics">
+                        <a href="#"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="pics"></a>
                             <div class="description_pics_top">
                                 <h2>Auberge la Cannebièrre</h2>
                                 <span>Nuit à partir de <strong>25€</strong></span>
@@ -136,7 +136,7 @@
                             </div>
                     </div>
                     <div class="pics_hosting">
-                        <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="pics">
+                        <a href="#"><img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="pics"></a>
                             <div class="description_pics_top"> 
                                 <h2>Hôtel du port</h2>
                                 <span>Nuit à partir de <strong>52€</strong></span>
@@ -152,7 +152,7 @@
                             </div>    
                     </div>
                     <div class="pics_hosting">
-                        <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="pics">
+                        <a href="#"><img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="pics"></a>
                             <div class="description_pics_top">   
                                 <h2>Hôtel Les mouettes</h2>
                                 <span>Nuit à partir de <strong>76€</strong></span>
@@ -170,7 +170,7 @@
                             </div>
                     </div>
                     <div class="pics_hosting">
-                        <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="pics">
+                        <a href="#"><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="pics"></a>
                             <div class="description_pics_bottom">
                                 <h2>Hôtel de la mer</h2>
                                 <span>Nuit à partir de <strong>46€</strong></span>
@@ -188,7 +188,7 @@
                             </div>
                     </div>
                     <div class="pics_hosting">
-                        <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="pics">
+                        <a href="#"><img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="pics"></a>
                             <div class="description_pics_bottom">
                                 <h2>Auberge Le Panier</h2>
                                 <span>Nuit à partir de <strong>23€</strong></span>
@@ -206,7 +206,7 @@
                             </div>
                     </div>
                     <div class="pics_hosting">
-                        <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="pics">
+                        <a href="#"><img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="pics"></a>
                             <div class="description_pics_bottom">
                                 <h2>Hôtel chez Amina</h2>
                                 <span>Nuit à partir de <strong>96€</strong></span>
@@ -236,7 +236,7 @@
                 </div>
                 <div id="pics_most_popular">
                     <div class="pics_most_popular">
-                        <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="pics">
+                        <a href="#"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="pics"></a>
                         <div class="description_pics_most_popular1">
                             <h2>Hôtel Le soleil du </br> matin</h2>
                             <span>Nuit à partir de <strong>128€</strong></span>
@@ -252,7 +252,7 @@
                         </div>
                     </div>
                     <div class="pics_most_popular">
-                        <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="pics">
+                        <a href="#"><img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="pics"></a>
                         <div class="description_pics_most_popular2">
                             <h2>Au coeur de l'eau </br> chambre d'hôtes</h2>
                             <span>Nuit à partir de <strong>71€</strong></span>
@@ -270,7 +270,7 @@
                         </div>
                     </div>
                     <div class="pics_most_popular">
-                        <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="pics">
+                        <a href="#"><img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="pics"></a>
                         <div class="description_pics_most_popular3">
                             <h2>Hôtel tout bleu et </br> blanc</h2>
                             <span>Nuit à partir de <strong>68€</strong></span>
@@ -288,6 +288,47 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Activity-->
+
+    <section>
+        <div class="section">
+            <div class="Activity">
+                <h1 id="activity">Activités à Marseille</h1>
+                    <div class="pics_activity">
+                        <div class="pics1">
+                            <a href="#"><img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="pics_Activity"></a>
+                                <h2>Vieux Port</h2>
+                        </div>
+
+                        <div class="pics2">
+                            <a href="#"><img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="pics_Activity"></a>
+                                <h2>Port de Pomègues</h2>
+                        </div>
+
+                        <div class="pics3">
+                            <a href="#"><img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="pics_Activity"></a>
+                                <h2>îles du Frioul</h2>
+                        </div>
+
+                        <div class="pics1">
+                            <a href="#"><img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="pics_Activity"></a>
+                                <h2>Parc National des Calanques</h2>
+                        </div>
+
+                        <div class="pics4">
+                            <a href="#"><img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="pics_Activity"></a>
+                                <h2>Notre-Dame-de-la-Garde</h2>
+                        </div>
+
+                        <div class="pics5">
+                            <a href="#"><img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="pics_Activity"></a>
+                                <h2>Parc Longchamp</h2>
+                        </div>
+                    </div>
             </div>
         </div>
     </section>
