--- a/reservia.html
+++ b/reservia.html
@@ -18,7 +18,7 @@
         <div id="logo_reservia"><img src="logo/Reservia@3x.png" alt="#"></div>
 
         <nav>
-                <a href="#hosting">Hébergements</a>
+                <a href="#hosting" class="nav_hosting">Hébergements</a>
                 <a href="#activity">Activités</a>
                 <a href="#" id="inscription">S'inscrire</a>
         </nav>
@@ -332,5 +332,28 @@
             </div>
         </div>
     </section>
+
+    <!--footer-->
+
+    <footer>
+        <div class="footer_about">
+            <h3>A propos</h3>
+            <a href="#"><span>Fonctionnement du site</span></a>
+            <a href="#"><span>Conditions générales de vente</span></a>
+            <a href="#"><span>Données et confidentialité</span></a>
+        </div>
+
+        <div class="footer_hosting">
+            <h3>Nos hébergements</h3>
+            <a href="#"><span>charte qualité</span></a>
+            <a href="#"><span>soumettre votre hôtel</span></a>
+        </div>
+
+        <div class="footer_assistance">
+            <h3>Assistance</h3>
+            <a href="#"><span>Centre d'aide</span></a>
+            <a href="#"><span>Nous contacter</span></a>
+        </div>
+    </footer>
 </body>
 </html>
