--- a/reservia.html
+++ b/reservia.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reservia.css">
-    <link rel="stylesheet" media="screen and (max-width: 375px)" href="resolution-iphone8.css">
+    <link rel="stylesheet" media="screen and (max-width: 375px)" href="small-device.css">
     <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
 </head>
@@ -29,7 +29,7 @@
     <!--paragraphes-->
 
     <section>
-        <div class="tittle1">
+        <div class="title1">
             <h1> Trouvez votre hébergement pour des vacances de rêve</h1>
         
         </div>
@@ -296,8 +296,8 @@
 
     <section>
         <div class="section">
-            <div class="Activity">
-                <h1 id="activity">Activités à Marseille</h1>
+            <div class="contains_activity">
+                <h1 class="activity">Activités à Marseille</h1>
                     <div class="pics_activity">
                         <div class="pics1">
                             <a href="#"><img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="pics_Activity"></a>
