--- a/reservia.html
+++ b/reservia.html
@@ -113,13 +113,11 @@
 
     <section>
         <div class="section">
-            <div class="hosting">
+            <div class="contains_hosting">
                 <h1 id="hosting">Hébergements à Marseille</h1>
-
                 <div id="pics_hosting">
-                    <div class="pics_hosting">
-                        <a href="#"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="pics"></a>
-                            <div class="description_pics_top">
+                    <div class="pics_hosting_1">
+                           <div class="description_pics_top">
                                 <h2>Auberge la Cannebièrre</h2>
                                 <span>Nuit à partir de <strong>25€</strong></span>
                                 <div class="stars">
@@ -135,8 +133,7 @@
                                 </div>
                             </div>
                     </div>
-                    <div class="pics_hosting">
-                        <a href="#"><img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="pics"></a>
+                    <div class="pics_hosting_2">
                             <div class="description_pics_top"> 
                                 <h2>Hôtel du port</h2>
                                 <span>Nuit à partir de <strong>52€</strong></span>
@@ -151,8 +148,7 @@
                                 </div>
                             </div>    
                     </div>
-                    <div class="pics_hosting">
-                        <a href="#"><img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="pics"></a>
+                    <div class="pics_hosting_3">
                             <div class="description_pics_top">   
                                 <h2>Hôtel Les mouettes</h2>
                                 <span>Nuit à partir de <strong>76€</strong></span>
@@ -169,8 +165,7 @@
                                 </div>
                             </div>
                     </div>
-                    <div class="pics_hosting">
-                        <a href="#"><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="pics"></a>
+                    <div class="pics_hosting_4">
                             <div class="description_pics_bottom">
                                 <h2>Hôtel de la mer</h2>
                                 <span>Nuit à partir de <strong>46€</strong></span>
@@ -187,8 +182,7 @@
                                 </div>
                             </div>
                     </div>
-                    <div class="pics_hosting">
-                        <a href="#"><img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="pics"></a>
+                    <div class="pics_hosting_5">
                             <div class="description_pics_bottom">
                                 <h2>Auberge Le Panier</h2>
                                 <span>Nuit à partir de <strong>23€</strong></span>
@@ -205,8 +199,7 @@
                                 </div>
                             </div>
                     </div>
-                    <div class="pics_hosting">
-                        <a href="#"><img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="pics"></a>
+                    <div class="pics_hosting_6">
                             <div class="description_pics_bottom">
                                 <h2>Hôtel chez Amina</h2>
                                 <span>Nuit à partir de <strong>96€</strong></span>
